# clams-cc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
example/: example_clusters1.txt  example_clusters2.txt  example_output.txt
extra/: CMakeLists.txt  cluster_incidence.cpp  graph_cluster_analysis.cpp
include/: clustering_metrics_mi.hpp  clustering_metrics_utils.hpp  common_utils.hpp
src/: CMakeLists.txt  clustering_metrics.cpp  clustering_metrics_no_mi.cpp
test/: CMakeLists.txt  test_clustering_metrics.cpp
